--- a/apps/examples/aws-example/config/app-config.json
+++ b/apps/examples/aws-example/config/app-config.json
@@ -22,51 +22,79 @@
     }
   },
   "settings": {
-    "fs_storage": {
-      "path": "{env.storage.base_path}/{auto}",
-      "partition_dateformat": "%Y/%m/%d/%H/"
-    },
     "storage.save_events_fs": {
       "path": "{env.storage.base_path}/{auto}",
       "partition_dateformat": "%Y/%m/%d/%H/",
       "flush_seconds": 60.0,
       "flush_max_size": 100
     },
-    "object_store": {
+    "s3_conn_config": {
       "endpoint_url": "${OBJECT_STORAGE_ENDPOINT_URL}",
       "aws_access_key_id": "${OBJECT_STORAGE_ACCESS_KEY_ID}",
       "aws_secret_access_key": "${OBJECT_STORAGE_SECRET_ACCESS_KEY}",
       "use_ssl": "${OBJECT_STORAGE_SSL}"
     },
-    "hopeit_bucket": {
-      "bucket": "hopeit-store"
+    "object_store": {
+      "bucket": "hopeit-store",
+      "partition_dateformat": "%Y/%m/%d/%H/"
     }
   },
   "events": {
     "save_something": {
       "type": "POST",
       "setting_keys": [
-        "fs_storage",
-        "object_store",
-        "hopeit_bucket"
+        "s3_conn_config",
+        "object_store"
       ]
     },
     "query_something": {
       "type": "POST",
       "setting_keys": [
-        "fs_storage",
-        "object_store",
-        "hopeit_bucket"
+        "s3_conn_config",
+        "object_store"
+      ]
+    },
+    "list_objects": {
+      "type": "GET",
+      "setting_keys": [
+        "s3_conn_config",
+        "object_store"
+      ]
+    },
+    "list_files": {
+      "type": "GET",
+      "setting_keys": [
+        "s3_conn_config",
+        "object_store"
       ]
     },
     "download_something": {
-      "type": "GET"
+      "type": "GET",
+      "setting_keys": [
+        "s3_conn_config",
+        "object_store"
+      ]
     },
-    "download_something_streamed": {
-      "type": "GET"
+    "upload_download_file": {
+      "type": "GET",
+      "setting_keys": [
+        "s3_conn_config",
+        "object_store"
+      ]
     },
-    "upload_something": {
-      "type": "MULTIPART"
+    "upload_file_streamed": {
+      "type": "MULTIPART",
+      "setting_keys": [
+        "s3_conn_config",
+        "object_store"
+      ]
+    },
+    "download_file_streamed": {
+      "type": "GET",
+      "setting_keys": [
+        "s3_conn_config",
+        "object_store"
+      ]
     }
   }
 }
