--- a/.github/workflows/hopeit-engine-qa.yml
+++ b/.github/workflows/hopeit-engine-qa.yml
@@ -28,7 +28,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        make locked-deps
+        make dev-deps
     - name: hopeit.aws QA
       run: |
         make qa
