--- a/.github/workflows/hopeit-aws-pypi-publishing.yml
+++ b/.github/workflows/hopeit-aws-pypi-publishing.yml
@@ -30,6 +30,6 @@ jobs:
         make PLUGINFOLDER=plugins/aws/s3/ dist-plugin
     - name: Publish plugin aws/s3 on Test PyPI
       env: 
-        PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN_AWS }}
       run: |
         make PLUGINFOLDER=plugins/aws/s3 pypi-plugin
