--- a/.github/workflows/hopeit-aws-test-pypi-publishing.yml
+++ b/.github/workflows/hopeit-aws-test-pypi-publishing.yml
@@ -30,6 +30,6 @@ jobs:
         make PLUGINFOLDER=plugins/aws/s3/ dist-plugin
     - name: Publish plugin aws/s3 on Test PyPI
       env: 
-        TEST_PYPI_API_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN_ALL }}
+        TEST_PYPI_API_TOKEN: ${{ secrets.TEST_PYPI_API_TOKEN_AWS }}
       run: |
         make PLUGINFOLDER=plugins/aws/s3 pypi-test-plugin
