move create_bucket to init SETUP event; bump aioboto3 version

--- a/apps/examples/aws-example/config/app-config.json
+++ b/apps/examples/aws-example/config/app-config.json
@@ -25,6 +25,12 @@
     }
   },
   "events": {
+    "s3.init": {
+      "type": "SETUP",
+      "setting_keys": [
+        "object_storage"
+      ]
+    },
     "s3.save_something": {
       "type": "POST",
       "setting_keys": [
