--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,12 @@
                 "OBJECT_STORAGE_SSL": "false",
                 "HOPEIT_AWS_API_VERSION": "0.1"
             },
-            "justMyCode": false
+            "justMyCode": true,
+            "serverReadyAction": {
+                "pattern": "Running on http://([0-9]+[.][0-9]+[.][0-9]+[.][0-9]+:[0-9]+)",
+                "uriFormat": "http://%s/api/docs",
+                "action": "openExternally"
+            },
         },
     ]
 }
