--- a/.github/workflows/hopeit-aws-qa.yml
+++ b/.github/workflows/hopeit-aws-qa.yml
@@ -1,34 +1,37 @@
 # This workflow will install hopeit.aws dev Python dependencies, run tests in multiple version of Python
 
-name: hopeit.aws QA
+name: hopeit.aws CI
 
 on:
   push:
     branches:
-    - master
+      - master
   pull_request:
     branches:
-    - master
-    - dev
+      - master
+      - dev
 
 jobs:
-  build:
-
+  ci-checks:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12", "3.11", "3.10", "3.9"]
+        module: ["plugins", "apps"]
+        stage: ["lint", "test"]
+        python-version: ["3.13", "3.12", "3.11", "3.10"]
       max-parallel: 5
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        make dev-deps
-    - name: hopeit.aws QA
-      run: |
-        make qa
+      - uses: actions/checkout@v4
+
+      - name: install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          version: "latest"
+
+      - name: make ci-deps
+        run: PYTHONVERSION=${{ matrix.python-version }} make ci-deps
+
+      - name: run check
+        run: |
+          make ${{ matrix.stage }}-${{ matrix.module }}
