--- a/plugins/aws/s3/pyproject.toml
+++ b/plugins/aws/s3/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "hopeit.aws.s3"
-version = "0.3.0rc1"
+version = "0.3.0rc0"
 
 description = "Hopeit Engine S3 Storage Toolkit"
 dynamic = ["readme"]
 
-dependencies = ["hopeit.engine>=0.26.0rc1", "aioboto3>=14.0.0"]
+dependencies = ["hopeit.engine>=0.25.4", "aioboto3>=14.0.0"]
 license = { text = "Apache 2" }
 authors = [
     { name = "Leo Smerling & Pablo Canto", email = "contact@hopeit.com.ar" },
