--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 
 [project]
 name = "hopeit.aws.workspace"
-version = "0.3.rc0"
+version = "0.3.0rc0"
 
 dynamic = ["readme"]
 
@@ -45,9 +45,10 @@ aws-example = { path = "apps/examples/aws-example" }
 
 [tool.uv]
 dev-dependencies = [
+    "aiofiles>=24.1.0",
     "aioboto3>=14.0.0",
-    "boto3-stubs>=1.37.1",
-    "hopeit.engine>=0.26.rc1",
+    "boto3-stubs>=1.37.3",
+    "hopeit.engine>=0.25.4",
     "moto[server]>=5.1.0",
     "mypy>=1.15.0",
     "mypy-boto3-s3>=1.37.0",
@@ -55,7 +56,7 @@ dev-dependencies = [
     "pytest-asyncio>=0.25.3",
     "pytest-cov>=6.0.0",
     "ruff>=0.9.8",
-    "types-aiofiles>=24.1.0"
+    "types-aiofiles>=24.1.0",
 ]
 package = false
 
