update openapi, linting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,3 +78,6 @@ asyncio_default_fixture_loop_scope = "function"
 
 [tool.setuptools.dynamic]
 readme = { file = ["README.md"], content-type = "text/markdown" }
+
+[tool.mypy]
+check_untyped_defs = true
